hotfix: correct description overflow gradient on hover & focus

--- a/toggl-dark-theme.user.css
+++ b/toggl-dark-theme.user.css
@@ -546,8 +546,8 @@
     );
   }
 
-  .css-rlhb3m:hover .e1lkghrh0::after,
-  .css-rlhb3m:focus .e1lkghrh0::after {
+  .css-rlhb3m:hover .e10vqxue1 .e1lkghrh0::after,
+  .efwcymi0:focus .e1lkghrh0::after {
     background: linear-gradient(
       to right,
       rgba(244, 245, 246, 0) 0%,
